Update image names.

--- a/content/posts/2020-01-10-post-one.md
+++ b/content/posts/2020-01-10-post-one.md
@@ -4,12 +4,12 @@ date: '2020-01-10'
 draft: false
 tags: ['gatsby', 'other']
 description: 'SEO description for post'
-image: '/images/landscape-1.jpg'
+image: '/images/landscape-water.jpg'
 ---
 
 This is my first post using Gatbsy.
 
-![Landscape](../../images/landscape-2.jpg)
+![Landscape](/images/landscape-tree-tops.jpg)
 
 ## Topics Covered
 
