Rename `subtitle` param to `excerpt`.

--- a/content/404.md
+++ b/content/404.md
@@ -1,6 +1,6 @@
 ---
 title: '404.'
-subtitle: 'What you are looking for could not be found.'
+excerpt: 'What you are looking for could not be found.'
 draft: false
 image: '/images/not-found.jpg'
 ---
